fix geoip ecs compatibility

--- a/configmap-logstash-pipeline-waf.yaml
+++ b/configmap-logstash-pipeline-waf.yaml
@@ -96,6 +96,7 @@ data:
       }
       geoip {
         source => "source_host"
+        target => "geoip"
       }
       ruby {
           code => "
